--- a/nb/shor_manual_qiskit.ipynb
+++ b/nb/shor_manual_qiskit.ipynb
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "qiskit",
    "language": "python",
    "name": "python3"
   },
