--- a/nb/Untitled.ipynb
+++ b/nb/Untitled.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c2852171-cb1e-4221-bd68-da3e02cda175",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'QuantumInstance' from 'qiskit.quantum_info' (C:\\Users\\jayamao\\.conda\\envs\\qiskit\\lib\\site-packages\\qiskit\\quantum_info\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mquantum_info\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m partial_trace\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m#from qiskit.utils.arithmetic import is_power\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mquantum_info\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QuantumInstance\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvalidation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m validate_min\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit_algorithms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malgorithm_result\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AlgorithmResult\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'QuantumInstance' from 'qiskit.quantum_info' (C:\\Users\\jayamao\\.conda\\envs\\qiskit\\lib\\site-packages\\qiskit\\quantum_info\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This code is part of Qiskit.\n",
     "#\n",
@@ -594,12 +582,34 @@
    "id": "eba53b1a-87a1-48f9-be1e-a6451b1760a3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from shors_factor.factoring_simple import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a75b09a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factor_number(35,7,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d984e0",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "qiskit",
    "language": "python",
    "name": "python3"
   },
