--- a/nb/dev.ipynb
+++ b/nb/dev.ipynb
@@ -5,19 +5,7 @@
    "execution_count": null,
    "id": "29e367e4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ModularMultiplicationGate' from 'qiskit.circuit.library' (/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/library/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[46], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcircuit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlibrary\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QFT\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#from qiskit.circuit.library import ModularExponentiation\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcircuit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlibrary\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModularMultiplicationGate\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m gcd, ceil, log\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfractions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Fraction\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ModularMultiplicationGate' from 'qiskit.circuit.library' (/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/library/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit, transpile, QuantumRegister, ClassicalRegister\n",
     "from qiskit_aer import AerSimulator\n",
@@ -48,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "08d32423",
    "metadata": {},
    "outputs": [],
@@ -62,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f9e20327",
    "metadata": {},
    "outputs": [],
@@ -96,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "092221b5",
    "metadata": {},
    "outputs": [],
@@ -136,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "452e1b81",
    "metadata": {},
    "outputs": [],
@@ -160,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "1b7af546",
    "metadata": {},
    "outputs": [],
@@ -174,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "bb280609",
    "metadata": {},
    "outputs": [],
@@ -187,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "9f760718",
    "metadata": {},
    "outputs": [],
@@ -225,26 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "0f19886a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1100': 263, '1000': 234, '0000': 286, '0100': 241}\n",
-      "0000\n",
-      "1\n",
-      "{'1100': 262, '0100': 259, '0000': 259, '1000': 244}\n",
-      "1100\n",
-      "4\n",
-      "Found factor of 15 using base 8: 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "N = 15\n",
+    "N = 11*17\n",
+    "print(N.bit_length)\n",
+    "\n",
     "a = get_random_base(N)\n",
     "factor = None\n",
     "while factor == None :\n",
@@ -255,29 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "fcb9d857",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CircuitError",
-     "evalue": "'Bit \\'<Qubit register=(4, \"q27\"), index=0>\\' is not in the circuit.'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCircuitError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m factor \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m :\n\u001b[1;32m      5\u001b[0m     a \u001b[38;5;241m=\u001b[39m get_random_base(N)\n\u001b[0;32m----> 6\u001b[0m     factor \u001b[38;5;241m=\u001b[39m \u001b[43mshor_manual\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound factor of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mN\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m using base \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfactor\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[57], line 7\u001b[0m, in \u001b[0;36mshor_manual\u001b[0;34m(N, a)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m gcd(a, N)\n\u001b[1;32m      5\u001b[0m n_count \u001b[38;5;241m=\u001b[39m N\u001b[38;5;241m.\u001b[39mbit_length() \u001b[38;5;66;03m# get run only for min bits\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m qc \u001b[38;5;241m=\u001b[39m \u001b[43mqpe_modexp\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_count\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m simulator \u001b[38;5;241m=\u001b[39m AerSimulator()\n\u001b[1;32m     10\u001b[0m compiled_circuit \u001b[38;5;241m=\u001b[39m transpile(qc, simulator)\n",
-      "Cell \u001b[0;32mIn[83], line 22\u001b[0m, in \u001b[0;36mqpe_modexp\u001b[0;34m(a, N, n_count)\u001b[0m\n\u001b[1;32m     19\u001b[0m qc\u001b[38;5;241m.\u001b[39mx(n_count)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m q \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_count):\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m#qc = apply_c_amod15(qc, a**(2**q) % N, q, n_count)\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m     qc \u001b[38;5;241m=\u001b[39m \u001b[43mapply_c_amodX\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_count\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m qc\u001b[38;5;241m.\u001b[39mappend(QFT(num_qubits\u001b[38;5;241m=\u001b[39mn_count, inverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, do_swaps\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m), \u001b[38;5;28mrange\u001b[39m(n_count))\n\u001b[1;32m     25\u001b[0m qc\u001b[38;5;241m.\u001b[39mmeasure(\u001b[38;5;28mrange\u001b[39m(n_count), \u001b[38;5;28mrange\u001b[39m(n_count))\n",
-      "Cell \u001b[0;32mIn[82], line 4\u001b[0m, in \u001b[0;36mapply_c_amodX\u001b[0;34m(qc, a, q, N, n_count, t)\u001b[0m\n\u001b[1;32m      2\u001b[0m mod_exp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mpow\u001b[39m(a, \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mq, N)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#qc.cp(2*np.pi*mod_exp/N, q, t)\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mqc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcp\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpi\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmod_exp\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m qc\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/quantumcircuit.py:4691\u001b[0m, in \u001b[0;36mQuantumCircuit.cp\u001b[0;34m(self, theta, control_qubit, target_qubit, label, ctrl_state)\u001b[0m\n\u001b[1;32m   4689\u001b[0m \u001b[38;5;66;03m# if the control state is |1> use the fast Rust version of the gate\u001b[39;00m\n\u001b[1;32m   4690\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ctrl_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m ctrl_state \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m-> 4691\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_append_standard_gate\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   4692\u001b[0m \u001b[43m        \u001b[49m\u001b[43mStandardGate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCPhaseGate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mcontrol_qubit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_qubit\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabel\u001b[49m\n\u001b[1;32m   4693\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4695\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlibrary\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstandard_gates\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mp\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CPhaseGate\n\u001b[1;32m   4697\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m   4698\u001b[0m     CPhaseGate(theta, label\u001b[38;5;241m=\u001b[39mlabel, ctrl_state\u001b[38;5;241m=\u001b[39mctrl_state),\n\u001b[1;32m   4699\u001b[0m     [control_qubit, target_qubit],\n\u001b[1;32m   4700\u001b[0m     [],\n\u001b[1;32m   4701\u001b[0m     copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m   4702\u001b[0m )\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/quantumcircuit.py:2387\u001b[0m, in \u001b[0;36mQuantumCircuit._append_standard_gate\u001b[0;34m(self, op, qargs, params, label)\u001b[0m\n\u001b[1;32m   2384\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m params \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2385\u001b[0m     params \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m-> 2387\u001b[0m expanded_qargs \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_qbit_argument_conversion(qarg) \u001b[38;5;28;01mfor\u001b[39;00m qarg \u001b[38;5;129;01min\u001b[39;00m qargs \u001b[38;5;129;01mor\u001b[39;00m []]\n\u001b[1;32m   2388\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m param \u001b[38;5;129;01min\u001b[39;00m params:\n\u001b[1;32m   2389\u001b[0m     Gate\u001b[38;5;241m.\u001b[39mvalidate_parameter(op, param)\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/quantumcircuit.py:2387\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   2384\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m params \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2385\u001b[0m     params \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m-> 2387\u001b[0m expanded_qargs \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qbit_argument_conversion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqarg\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m qarg \u001b[38;5;129;01min\u001b[39;00m qargs \u001b[38;5;129;01mor\u001b[39;00m []]\n\u001b[1;32m   2388\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m param \u001b[38;5;129;01min\u001b[39;00m params:\n\u001b[1;32m   2389\u001b[0m     Gate\u001b[38;5;241m.\u001b[39mvalidate_parameter(op, param)\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/qiskit/lib/python3.10/site-packages/qiskit/circuit/quantumcircuit.py:2359\u001b[0m, in \u001b[0;36mQuantumCircuit._qbit_argument_conversion\u001b[0;34m(self, qubit_representation)\u001b[0m\n\u001b[1;32m   2348\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_qbit_argument_conversion\u001b[39m(\u001b[38;5;28mself\u001b[39m, qubit_representation: QubitSpecifier) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m[Qubit]:\n\u001b[1;32m   2349\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2350\u001b[0m \u001b[38;5;124;03m    Converts several qubit representations (such as indexes, range, etc.)\u001b[39;00m\n\u001b[1;32m   2351\u001b[0m \u001b[38;5;124;03m    into a list of qubits.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2357\u001b[0m \u001b[38;5;124;03m        The resolved instances of the qubits.\u001b[39;00m\n\u001b[1;32m   2358\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 2359\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qbit_argument_conversion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqubit_representation\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mCircuitError\u001b[0m: 'Bit \\'<Qubit register=(4, \"q27\"), index=0>\\' is not in the circuit.'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 15\n",
     "a = get_random_base(N)\n",
@@ -290,59 +247,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "fb577b55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "  -1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j -1.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  1.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j -1.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j -1.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j -1.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.+0.j -1.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j -1.-0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j\n",
-      "   0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.-0.j  0.-0.j  0.-0.j  0.-0.j  0.+0.j  0.-0.j  0.-0.j  0.-0.j\n",
-      "   0.-0.j  0.+0.j  0.-0.j  0.+0.j  0.+0.j  0.+0.j  1.+0.j]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x10e26ac80>"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit, QuantumRegister\n",
     "from qiskit.circuit import Gate\n",
@@ -393,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "9bc75d1b",
    "metadata": {},
    "outputs": [],
@@ -422,22 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "bbe70193",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chosen base a = 2\n",
-      "145\n",
-      "137\n",
-      "146\n",
-      "The factors for 15 are: 15, 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#a = random.randint(2, N-1)\n",
@@ -496,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "a518fe53",
    "metadata": {},
    "outputs": [],
@@ -615,6 +511,24 @@
     "        return (f1, f2)\n",
     "    return None\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a07439d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "11*17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2bc5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
